--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
         var $body = $('body');
         $body.html('');
 
+        $();
+
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message + '. ' + tweet.created_at);
+          $( $.parseHTML('<a href="#">@' + tweet.user + '</a>: ' + tweet.message + '. ' + tweet.created_at) ).appendTo($tweet);
           $tweet.appendTo($body);
           index -= 1;
+        }
+
+        function renderUserTimeline(username) {
+          var index = streams.users[username].length - 1;
+          while (index >= 0) {
+            var tweet = streams.users[username][index];
+            var $tweet = $('<div></div>');
+            $tweet.text('@' + tweet.user + ': ' + tweet.message + '. ' + tweet.created_at);
+            $tweet.prependTo($body);
+            index -= 1;
+          }
         }
 
       });
