--- a/index.html
+++ b/index.html
@@ -5,24 +5,47 @@
     <script src="data_generator.js"></script>
   </head>
   <body>
+    <div class="home">
+      <div class="tweet">
+        <div class="tweet-header">
+          <a href="#">@mracus</a><span>Sun Mar 05 2017 14:59:36 GMT-0800 (PST)</span>
+        </div>
+        <p>
+          just built an entire mind #sxsw.
+        </p>
+      </div>
+    </div>
+    <div class="user-timeline">
+      <a href="#">Back to home</a>
+      <div class="tweet">
+        <div class="tweet-header">
+          <a href="#">@mracus</a><span>Sun Mar 05 2017 14:59:36 GMT-0800 (PST)</span>
+        </div>
+        <p>
+          just built an entire mind #sxsw.
+        </p>
+      </div>
+    </div>
     <script>
 
       $(document).ready(function(){
         var $body = $('body');
         $body.html('');
 
-        $();
+
 
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
+          var $tweet = $('<div class="tweet"></div>');
+          $tweet.addClass('tweet').data('user', tweet.user)
           $( $.parseHTML('<a href="#">@' + tweet.user + '</a>: ' + tweet.message + '. ' + tweet.created_at) ).appendTo($tweet);
           $tweet.appendTo($body);
           index -= 1;
         }
 
-        function renderUserTimeline(username) {
+        function renderUserTimeline() {
+          var username = $(this).closest('.tweet').data('user');
           var index = streams.users[username].length - 1;
           while (index >= 0) {
             var tweet = streams.users[username][index];
@@ -31,6 +54,12 @@
             $tweet.prependTo($body);
             index -= 1;
           }
+        }
+
+        $('a').on('click', 'a', renderUserTimeline);
+
+        function notify() {
+          alert('clicked');
         }
 
       });
