--- a/index.html
+++ b/index.html
@@ -14,9 +14,25 @@
           just built an entire mind #sxsw.
         </p>
       </div>
+      <div class="tweet">
+        <div class="tweet-header">
+          <a href="#">@mracus</a><span>Sun Mar 05 2017 14:59:36 GMT-0800 (PST)</span>
+        </div>
+        <p>
+          just built an entire mind #sxsw.
+        </p>
+      </div>
     </div>
     <div class="user-timeline">
       <a href="#">Back to home</a>
+      <div class="tweet">
+        <div class="tweet-header">
+          <a href="#">@mracus</a><span>Sun Mar 05 2017 14:59:36 GMT-0800 (PST)</span>
+        </div>
+        <p>
+          just built an entire mind #sxsw.
+        </p>
+      </div>
       <div class="tweet">
         <div class="tweet-header">
           <a href="#">@mracus</a><span>Sun Mar 05 2017 14:59:36 GMT-0800 (PST)</span>
@@ -32,20 +48,28 @@
         var $body = $('body');
         $body.html('');
 
-
+        // Create structure for toggling content
+        ($body).append('<div class="home"></div>');
+        ($body).append('<div class="user-timeline"></div>');
 
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
-          var $tweet = $('<div class="tweet"></div>');
-          $tweet.addClass('tweet').data('user', tweet.user)
-          $( $.parseHTML('<a href="#">@' + tweet.user + '</a>: ' + tweet.message + '. ' + tweet.created_at) ).appendTo($tweet);
-          $tweet.appendTo($body);
+
+          var $tweet = $.parseHTML('<div class="tweet" data-username="' + tweet.user + '"></div>');
+          var $tweetHeader = $.parseHTML('<div class="tweet-header"><a href="#">@' + tweet.user + '</a><span>' + tweet.created_at + '</span></div>');
+          var $tweetBody = $.parseHTML('<p>' + tweet.message + '</p>');
+
+          $($tweetHeader).appendTo($tweet);
+          $($tweetBody).appendTo($tweet);
+          $($tweet).appendTo('.home');
+
           index -= 1;
         }
 
         function renderUserTimeline() {
-          var username = $(this).closest('.tweet').data('user');
+          console.log($(this));
+          var username = $(this).closest('div').data('username');
           var index = streams.users[username].length - 1;
           while (index >= 0) {
             var tweet = streams.users[username][index];
