Go back and forth between home and user-timeline
What: You can click on any username in the home view and it
will take you to their timeline view. then you can click the
back button from the timeline view and it will return you to
the home view.

Whenever you go back to the user-timeline it will be all their
latest tweets. But when you go back to home view it will be
the original tweets from when first loaded.

Why: Need to be able to go back and forth as much as you want
between home and user-timeline.

Still need to refactor a lot and make the home view fresh when
someone returns to it instead of stale though.

--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
         });
 
         $('.home').on('click', 'a', renderUserTimeline);
-        $('.user-timeline').on('click', 'a', notify);
+        $('.user-timeline').on('click', '.back', function() {
+          $('.user-timeline').css('display', 'none');
+          $('.home').css('display', 'block');
+        });
 
         function renderUserTimeline() {
           $('.user-timeline').html('');
+          $('.home').css('display', 'none');
+          $('.user-timeline').css('display', 'block');
           var username = $(this).closest('.tweet').data('username');
           var index = streams.users[username].length - 1;
           while (index >= 0) {
             var tweet = streams.users[username][index];
-            $(renderTweet(tweet)).prependTo('.user-timeline');
+            $(renderTweet(tweet)).appendTo('.user-timeline');
             index -= 1;
           }
           $('<a href="#" class="back">Back to home</a>').prependTo('.user-timeline');
