Refactor initial home view to use renderHome()
What: re-use exact function to render the initial home view
when the page first launches as the function for when switching
back to the home view from the user-timeline.

Why: SuperDRY™

--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
         ($body).append('<div class="home"></div>');
         ($body).append('<div class="user-timeline"></div>');
 
-        var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          $(renderTweet(tweet)).appendTo('.home');
-          index -= 1;
-        }
+        renderHome();
 
         $('a').on('click', function(event) {
           event.preventDefault();
