Auto-loads new tweets every 10 seconds
What: Sets up a polling every 10 seconds to print out the full list
of tweets ever tweeted. It doesn't just add new ones -_-

Why: It's the firehose aesthetic.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
           event.preventDefault();
         });
 
+        // Function to poll for new tweets
+        var loadNewTweets = function() {
+          if (streams.home.length > $('.home .tweets').length) {
+            renderHome()
+          }
+          setTimeout(loadNewTweets, 10000);
+        };
+
         // Initialize home view
         renderHome();
+
+        // Poll for new tweets
+        loadNewTweets();
 
         // Helper functions
         function renderHome() {
