--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         // Function to poll for new tweets
         var loadNewTweets = function() {
-          if (streams.home.length > $('.home .tweets').length) {
+          if (streams.home.length > $('.home .tweets').length && $('.home').css('display') === 'block') {
             renderHome()
           }
           setTimeout(loadNewTweets, 10000);
